force-app/main/default/objects/Inscripcion__c/Inscripcion__c.object-meta.xml
<CustomObject>
    <label>Inscripcion</label>
    <nameField>
        <displayFormat>I-{00}</displayFormat>
        <label>Inscripcion Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inscripciones</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>