force-app/main/default/objects/Inscripcion__c/fields/Extracurricular__c.field-meta.xml
<CustomField>
    <fullName>Extracurricular__c</fullName>
    <label>Extracurricular</label>
    <referenceTo>Extracurricular__c</referenceTo>
    <relationshipLabel>Inscripciones</relationshipLabel>
    <relationshipName>Inscripciones</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>