force-app/main/default/objects/Inscripcion__c/fields/Fecha_y_Hora__c.field-meta.xml
<CustomField>
    <fullName>Fecha_y_Hora__c</fullName>
    <formula>Extracurricular__r.Fecha_y_hora__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fecha y Hora</label>
    <type>DateTime</type>
</CustomField>